--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" href="%PUBLIC_URL%/images/logo.jpg" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/images/logo.jpg" />
-    <title>ArcMedia</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
-      rel="stylesheet"
+      rel="description"
+      content=" Arc media is an advertising and a marketing agency that has come into existence for removing the stereotypes that has been set or framed in the minds of all the business holders and owners that marketing as an art or a science is an expensive thing and needs to have a certain budget aligned with. Not just a business relationship but arc media believes in connecting with our clients and getting in their respective minds to align our creativity with the output that the clients want with their own business."
     />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule=""
-      src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"
-    ></script>
+    <link rel="og:image" content="%PUBLIC_URL%/images/logo.jpg" />
+    <link rel="og:title" content="ArcMedia" />
+    <link
+      rel="og:description"
+      content=" Arc media is an advertising and a marketing agency that has come into existence for removing the stereotypes that has been set or framed in the minds of all the business holders and owners that marketing as an art or a science is an expensive thing and needs to have a certain budget aligned with. Not just a business relationship but arc media believes in connecting with our clients and getting in their respective minds to align our creativity with the output that the clients want with their own business."
+    />
+    <link rel="keywords" content="ArcMedia, advertising, marketing agency,creativity, connecting" />
+    <title>ArcMedia</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+    <script type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"></script>
   </head>
   <body>
     <noscript>
